@@ -6,6 +6,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/).
 
 ## [Unreleased]
 ### Added
+- Add half-decent usage
 - Add a 'validate' subcommand
 - Add an optional 'file_format' field referring back to this repo
 
